--- a/index.html
+++ b/index.html
@@ -363,6 +363,17 @@
                     </li>
                 </ul>
             </div>
+            <div>
+                <h3 class="header-join">Подпишитесь на рассылку</h3>
+               <div>
+                <form class="">
+                    <label>
+                        <input type="text" name="e-mail" placeholder="E-mail">
+                    </label>
+                </form>
+               </div>
+                
+            </div>
       </div>
     </footer>
 <div class="backdrop is-hidden" data-modal>
