--- a/index.html
+++ b/index.html
@@ -385,6 +385,31 @@
             </svg>
            </div>         
         </button>
+            <div>
+                <p>Оставьте свои данные, мы вам перезвоним</p>
+                <div role="group">
+                    <label for="name">Имя</label>
+                    <input type="text" name="name" id="name" />
+                    <br>
+                    <label for="tel">Телефон</label>
+                    <input type="tel" name="tel" id="tel" />
+                    <br>
+                    <label for="mail">Mail</label>
+                    <input type="mail" name="mail" id="mail" />
+                    <br>
+                    <label for="comment">Комментарий</label>
+                    <input type="text" name="comment" placeholder="Введите текст" id="comment" />
+                </div>
+                <div>
+                    <label>
+                        <input type="checkbox" name="agree" value="agree" checked />
+                        Соглашаюсь с рассылкой и принимаю
+                    </label>
+                    <a href="">Условия договора</a>
+                </div>
+                <button class="order" type="button">Соглашаюсь</button>
+            </div>
+            </div>
     </div>
 
 </div> 
