--- a/index.html
+++ b/index.html
@@ -371,6 +371,11 @@
                         <input type="text" name="e-mail" placeholder="E-mail">
                     </label>
                 </form>
+                <button class="btn-submit" type="submit">Подписаться
+                    <svg class="icon-send" width="24" height="24">
+                        <use href="./images/sprite-hw4.svg#icon-icon-send"></use>
+                    </svg>
+                </button>
                </div>
                 
             </div>
