--- a/index.html
+++ b/index.html
@@ -403,24 +403,25 @@
                             </div>  
 
                              <div class="form-field">  
-                                <label for="tel" class="form-label">Телефон</label>
-                                <input type="tel" name="tel" id="tel" />
-                                <svg width="18" height="18">
+                                <input type="tel" class="form-input" name="tel" id="tel"/>
+                                <svg width="13" height="13">
                                     <use href="./images/sprite-hw4.svg#icon-phone"></use>
-                                </svg>
+                                </svg> 
+                                <label for="tel" class="form-label">Телефон</label>
+                               
                             </div>
 
                             <div class="form-field">
                                 <label for="mail" class="form-label">Почта</label>
-                                <input type="email" name="mail" id="mail"/>
-                                <svg width="18" height="18">
+                                <input type="email" class="form-input" name="mail" id="mail"/>
+                                <svg width="15" height="12">
                                     <use href="./images/sprite-hw4.svg#icon-email"></use>
                                 </svg>
                             </div>
 
                             <div class="form-field">
                                 <label for="comment">Комментарий</label>
-                                <input type="text" name="comment" placeholder="Введите текст" id="comment" />
+                                <input type="text" class="form-input" name="comment" placeholder="Введите текст" id="comment" />
                             </div>
                         </form>
                         <div class="form-field">
