--- a/portfolio.html
+++ b/portfolio.html
@@ -195,44 +195,59 @@
     </section>
 </main>
 <!--Футер-->
-<footer class="link-footer">
-    <div class="container common">
-        <div class="footer-logo-contact">
-            <a class="logo-footer" href="/"><span class="web">Web</span>Studio</a>
-            <address class="address">
-                <a class="footer" href="https://goo.gl/maps/7m1vxZSbiyb1Bdkx6">г. Киев, пр-т Леси Украинки, 26</a>
-                <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
-                <a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a>
-            </address>
-        </div>
-        <div class="footer-nets-links">
-            <h3 class="header-join">Присоединяйтесь</h3>
-            <ul class="join">
-                <li class="footer-nets">
-                    <a class="footer-link-svg" href=""> <svg class="footer-svg-item" width="20" height="20">
-                            <use href="./images/symbol-defs (1).svg#icon-instagram"> </use>
-                        </svg></a>
-                </li>
-                <li class="footer-nets">
-                    <a class="footer-link-svg" href=""> <svg class="footer-svg-item" width="20" height="20">
-                            <use href="./images/symbol-defs (1).svg#icon-twitter"> </use>
-                        </svg></a>
-                </li>
-                <li class="footer-nets">
-                    <a class="footer-link-svg" href=""> <svg class="footer-svg-item" width="20" height="20">
-                            <use href="./images/symbol-defs (1).svg#icon-facebook"> </use>
+    <footer class="link-footer">
+        <div class="container common">
+            <div class="footer-logo-contact">
+                <a class="logo-footer" href="/"><span class="web">Web</span>Studio</a>
+                <address class="address">
+                    <a class="footer" href="https://goo.gl/maps/7m1vxZSbiyb1Bdkx6">г. Киев, пр-т Леси Украинки, 26</a>
+                    <a class="footer-contact" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                    <a class="footer-contact" href="tel:+380961111111">+38 096 111 11 11</a>
+                </address>
+            </div>
+            <div class="footer-nets-links">
+                <h3 class="header-join">Присоединяйтесь</h3>
+                <ul class="join">
+                    <li class="footer-nets">
+                        <a class="footer-link-svg" href=""> <svg class="footer-svg-item" width="20" height="20">
+                                <use href="./images/sprite-hw4.svg#icon-instagram"> </use>
+                            </svg></a>
+                    </li>
+                    <li class="footer-nets">
+                        <a class="footer-link-svg" href=""> <svg class="footer-svg-item" width="20" height="20">
+                                <use href="./images/sprite-hw4.svg#icon-twitter"> </use>
+                            </svg></a>
+                    </li>
+                    <li class="footer-nets">
+                        <a class="footer-link-svg" href="">
+                            <svg class="footer-svg-item" width="20" height="20">
+                                <use href="./images/sprite-hw4.svg#icon-facebook"> </use>
+                            </svg></a>
+                    </li>
+                    <li class="footer-nets">
+                        <a class="footer-link-svg" href=""> <svg class="footer-svg-item" width="20" height="20">
+                                <use href="./images/sprite-hw4.svg#icon-linkedin"> </use>
+                            </svg></a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-nets-links subscribe">
+                <h3 class="header-join">Подпишитесь на рассылку</h3>
+                <div class="form-subscribe">
+                    <form>
+                        <label>
+                            <input type="text" name="e-mail" class="footer-input" placeholder="E-mail">
+                        </label>
+                    </form>
+                    <button class="btn-submit" type="submit">Подписаться
+                        <svg class="icon-send" width="24" height="24">
+                            <use href="./images/sprite-hw4.svg#icon-icon-send"></use>
                         </svg>
-                    </a>
-                </li>
-                <li class="footer-nets">
-                    <a class="footer-link-svg" href=""> <svg class="footer-svg-item" width="20" height="20">
-                            <use href="./images/symbol-defs (1).svg#icon-linkedin" > </use>
-                        </svg></a>
-                </li>
-            </ul>
+                    </button>
+                </div>
+    
+            </div>
         </div>
-    </div>
-</footer>
-
+    </footer>
 </body>
 </html>
