--- a/index.html
+++ b/index.html
@@ -426,12 +426,17 @@
                                 rows="8"
                                 placeholder="Введите текст"></textarea>                        
                         </form>
-                        <div class="form-field">
-                                <input type="checkbox" name="agree" value="agree" id="checkbox"/>
-                                <label for="checkbox">Соглашаюсь с рассылкой и принимаю</label> 
-                                    <a href="">Условия договора</a>
+
+                       
+                            <label class="checkbox-label">
+                                <input type="checkbox" class="checkbox" name="agree" value="agree"/>
+                                <span class="checkbox-icon"></span>
+                                <span class="text-checkbox">Соглашаюсь с рассылкой и принимаю</span> 
+                                <a href="">Условия договора</a>
+                                </label>
                         </div>
-                        <button class="order" type="button">Соглашаюсь</button>  
+                        
+                        <button class="order" type="submit">Соглашаюсь</button>  
                     </div>
              </div>
     </div> 
