--- a/portfolio.html
+++ b/portfolio.html
@@ -233,18 +233,16 @@
             </div>
             <div class="footer-nets-links subscribe">
                 <h3 class="header-join">Подпишитесь на рассылку</h3>
-                <div class="form-subscribe">
-                    <form>
-                        <label>
-                            <input type="text" name="e-mail" class="footer-input" placeholder="E-mail">
-                        </label>
-                    </form>
+                <form class="footer-form">
+                    <label>
+                        <input type="text" name="e-mail" class="footer-input" placeholder="E-mail">
+                    </label>
                     <button class="btn-submit" type="submit">Подписаться
                         <svg class="icon-send" width="24" height="24">
                             <use href="./images/sprite-hw4.svg#icon-icon-send"></use>
                         </svg>
                     </button>
-                </div>
+                </form>
     
             </div>
         </div>
