--- a/index.html
+++ b/index.html
@@ -430,10 +430,10 @@
                           <label class="checkbox-label">
                                 <input type="checkbox" name="checkbox" class="checkbox"/>
                                 <span class="checkbox-icon"></span>
-                                <span class="text-checkbox">Соглашаюсь с рассылкой и принимаю</span> 
-                                <a class="text-checkbox" href="">Условия договора</a>
+                                <span class="text-checkbox">Соглашаюсь с рассылкой и принимаю </span> 
+                                <a class="text-checkbox conditions" href="">Условия договора</a>
                             </label>                                           
-                            <button class="order" type="submit">Соглашаюсь</button>  
+                            <button class="btn-submit-checkbox" type="submit">Соглашаюсь</button>  
                     </div>     
             
     </div> 
