--- a/index.html
+++ b/index.html
@@ -415,12 +415,14 @@
                             </label>  
                             
                             <label class="form-field">
-                                <span class="form-label">Почта</span>                        
-                                <span class="modal-label"></span>
-                                <input type="email" class="form-input" name="mail" id="mail" />
-                                <svg class="form-svg" width="18" height="18">
-                                    <use href="./images/sprite-hw4.svg#icon-email"></use>
-                                </svg>
+                                <span class="form-label">Почта</span>
+                                <span class="modal-label">
+                                    <input type="text" class="form-input" name="name" placeholder=" " />
+                                    <svg class="form-svg" width="18" height="18">
+                                        <use href="./images/sprite-hw4.svg#icon-email"></use>
+                                    </svg>
+                                </span>
+                            
                             </label>
 
                             <label class="form-field">
