--- a/index.html
+++ b/index.html
@@ -436,11 +436,13 @@
                        </form>
                      
                           <label class="checkbox-label">
-                                <input type="checkbox" name="checkbox" class="checkbox"/>
+                              <span class="checkbox-all">
+                                <input type="checkbox" name="checkbox" class="checkbox" />
                                 <span class="checkbox-icon"></span>
-                                <span class="text-checkbox">Соглашаюсь с рассылкой и принимаю </span> 
+                                <span class="text-checkbox">Соглашаюсь с рассылкой и принимаю </span>
                                 <a class="text-checkbox conditions" href="">Условия договора</a>
-                          </label>                                           
+                              </span>
+                            </label>                                           
                             <button class="btn-submit-checkbox" type="submit">Соглашаюсь</button>  
                     </div>             
             </div>
