--- a/index.html
+++ b/index.html
@@ -425,13 +425,14 @@
                             
                             </label>
 
-                            <label class="form-field">
+                            <label class="form-field comment" > 
                                <span class="form-label">Комментарий</span>
                                 <textarea class="form-textarea" 
                                 name="comment" 
-                                id="comment" 
                                 rows="8"
                                 placeholder="Введите текст"></textarea>
+
+
                             </label>                            
                        </form>
                      
